--- a/css/RJB-Authorities.css
+++ b/css/RJB-Authorities.css
@@ -82,6 +82,7 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin: 28px 0;
+    width: 100%;
 }
 
 .Sec {
