--- a/css/RJB-Contact.css
+++ b/css/RJB-Contact.css
@@ -38,7 +38,7 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin: 28px 0;
-    width: 100%;
+    width: 80%;
 }
 
 p {
@@ -48,6 +48,10 @@ p {
 @media only screen and (max-width: 992px){
 	h4 {
 		margin: 12px 0 6px 0;
+	}
+
+	hr {
+		width: 90%;
 	}
 }
 
@@ -75,6 +79,10 @@ p {
 	h5 {
 		font-size: 13px;
 	}
+
+	hr {
+		width: 95%;
+	}
 }
 
 @media only screen and (max-width: 450px) {
@@ -86,5 +94,9 @@ p {
 	h5 {
 		font-size: 12px;
 		margin: 5px 0 5px 0;
+	}
+
+	hr {
+		width: 100%;
 	}
 }
