--- a/css/RJB-Gallery.css
+++ b/css/RJB-Gallery.css
@@ -20,7 +20,7 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     margin: 28px 0;
-    width: 100%;
+    width: 80%;
 }
 
 h4 {
@@ -201,6 +201,11 @@ h4 {
 	}
 }
 
+@media only screen and (max-width: 992px){
+	hr {
+		width: 90%;
+	}
+}
 @media only screen and (max-width: 600px){
 	.grid-container2 {
 		display: grid;
@@ -218,6 +223,10 @@ h4 {
 	.gc23 {
 		grid-area: "image3";
 	}
+
+	hr {
+		width: 95%;
+	}
 }
 
 @media only screen and (max-width: 600px){
@@ -234,5 +243,11 @@ h4 {
 	.C {
 		width: 170px;
 		margin: auto;
+	}
+}
+
+@media only screen and (max-width: 450px){
+	hr {
+		width: 100%;
 	}
 }
