--- a/css/RJB.css
+++ b/css/RJB.css
@@ -344,3 +344,9 @@ ul li a.icon {
 	    text-align: left;
 	}
 }
+
+@media only screen and (max-width: 450px){
+	.container {
+		width: 100%;
+	}
+}
