--- a/css/RJB-Facilities.css
+++ b/css/RJB-Facilities.css
@@ -23,12 +23,8 @@ p{
 	text-align: justify;
 }
 
-hr {
-	border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    margin: 28px 0;
-    width: 100%;
+.block {
+	padding-bottom: 10px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -42,10 +38,6 @@ hr {
 		padding-left: 12px;
 		border-left: 4px solid #bfbfbf;
 		text-align: justify;
-	}
-
-	hr {
-		width: 90%;
 	}
 }
 
@@ -71,15 +63,5 @@ hr {
 		width: 250px;
 		height: 166.67px;
 		box-shadow: -0.5vw 0.4vw 1.5vw #666666;
-	}
-
-	hr {
-		width: 95%;
-	}
-}
-
-@media only screen and (max-width: 450px){
-	hr {
-		width: 100%;
 	}
 }
