--- a/css/RJB-Gallery.css
+++ b/css/RJB-Gallery.css
@@ -15,17 +15,13 @@
 	box-shadow: -0.6vw 0.6vw 2vw #666666;
 }
 
-hr {
-	border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    margin: 28px 0;
-    width: 80%;
-}
-
 h4 {
 	margin-bottom: 10px;
 	color: #3939ac;
+}
+
+.grid-container {
+	padding-bottom: 15px;
 }
 
 .grid-container1,
@@ -201,11 +197,6 @@ h4 {
 	}
 }
 
-@media only screen and (max-width: 992px){
-	hr {
-		width: 90%;
-	}
-}
 @media only screen and (max-width: 600px){
 	.grid-container2 {
 		display: grid;
@@ -223,10 +214,6 @@ h4 {
 	.gc23 {
 		grid-area: "image3";
 	}
-
-	hr {
-		width: 95%;
-	}
 }
 
 @media only screen and (max-width: 600px){
@@ -243,11 +230,5 @@ h4 {
 	.C {
 		width: 170px;
 		margin: auto;
-	}
-}
-
-@media only screen and (max-width: 450px){
-	hr {
-		width: 100%;
 	}
 }
