--- a/css/RJB-Gallery.css
+++ b/css/RJB-Gallery.css
@@ -1,3 +1,9 @@
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 .A {
 	width: 450px;
 }
@@ -18,6 +24,7 @@
 h4 {
 	margin-bottom: 10px;
 	color: #3939ac;
+	padding-left: 10px;
 }
 
 .grid-container {
@@ -45,10 +52,12 @@ h4 {
 
 .gc11, .gc41, .gc61 {
 	grid-area: 1/1/2/2;
+	margin: auto;
 }
 
 .gc12, .gc42, .gc62 {
 	grid-area: 1/2/2/3;
+	margin: auto;
 }
 
 .gc13, .gc43, .gc63 {
@@ -66,10 +75,12 @@ h4 {
 
 .gc31 {
 	grid-area: 1/1/2/2;
+	margin: auto;
 }
 
 .gc32 {
 	grid-area: 1/2/2/3;
+	margin: auto;
 }
 
 .gc33 {
@@ -89,14 +100,17 @@ h4 {
 
 .gc21 {
 	grid-area: "image1";
+	margin: auto;
 }
 
 .gc22 {
 	grid-area: "image2";
+	margin: auto;
 }
 
 .gc23 {
 	grid-area: "image3";
+	margin: auto;
 }
 
 @media only screen and (max-width: 1230px){
@@ -186,14 +200,17 @@ h4 {
 
 	.gc21 {
 		grid-area: "image1";
+		margin: auto;
 	}
 
 	.gc22 {
 		grid-area: "image2";
+		margin: auto;
 	}
 
 	.gc23 {
 		grid-area: "image3";
+		margin: auto;
 	}
 }
 
@@ -205,14 +222,17 @@ h4 {
 
 	.gc21 {
 		grid-area: "image1";
+		margin: auto;
 	}
 
 	.gc22 {
 		grid-area: "image2";
+		margin: auto;
 	}
 
 	.gc23 {
 		grid-area: "image3";
+		margin: auto;
 	}
 }
 
@@ -230,5 +250,18 @@ h4 {
 	.C {
 		width: 170px;
 		margin: auto;
+	}
+
+	.Center img {
+		margin: 5px auto;
+		box-shadow: -1vw 1vw 3vw #666666;
+	}
+
+	.bon {
+		width: 100%;
+	}
+
+	.Center .bon img {
+		margin-left: 23px;
 	}
 }
