--- a/css/RJB.css
+++ b/css/RJB.css
@@ -121,7 +121,7 @@ ul li a.icon {
 	grid-template-columns: 45% 45%;
 	grid-template-rows: auto auto;
 	grid-column-gap: 10%;
-	padding: 10px 0;
+	padding-top: 10px;
 }
 
 .footer p {
@@ -133,12 +133,14 @@ ul li a.icon {
 		border-right: 1px solid #111111;
 		margin: 10px 0;
 		padding-right: 6vw;
+		padding-left: 10px;
 }
 
 .footitem2 {
 		grid-area: 1 / 2 / 2 / 3;
 		margin-top: 20px;
 		position: relative;
+		padding-left: 10px;
 }
 
 .footitem2 p {
@@ -156,6 +158,7 @@ ul li a.icon {
 		grid-area: 2 / 2 / 3 / 3;
 		margin-bottom: 20px;
 		position: relative;
+		padding-left: 10px;
 }
 
 .footitem3 i {
@@ -218,7 +221,7 @@ ul li a.icon {
 
 	.footer {
 		display: block;
-		padding-top: 3px 0;
+		padding-top: 3px;
 	}
 
 	.footitem1 {
@@ -342,6 +345,10 @@ ul li a.icon {
 	  	float: none;
 	    display: block;
 	    text-align: left;
+	}
+
+	.color{
+		height: 250px;
 	}
 }
 
